# realtime-pipeline

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  vermin.conf
.github/workflows/: bandit.yml  python-locks.yml  release-pypi.yml  requirements.txt.yml  test.yml  update_uv.lock.yml
src/realtime_pipeline/: __init__.py  realtime_pipeline.py
src/realtime_pipeline/manager/: progress.py
src/realtime_pipeline/utils/: typings.py
tests/: test_realtime_pipeline.py
tests/test_manager/: test_progress.py
tests/test_utils/: test_typings.py
