[project]
name = "realtime_pipeline"
version = "0.1.0"
description = "Build up pipelined programed to process the newest data"
authors = [
    {name = "timsu92",email = "33785401+timsu92@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = [
    "readerwriterlock>=1.0.9",
    "sortedcontainers>=2.4.0",
]


[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
